panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_conversion_to_and_from_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_conversion_to_and_from_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_conversion_to_and_from_pointer.c"
   (enum E~0
      (enumerators
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)
         (enumerator D~4 3 `int` 3)
         (enumerator E~5 4 `int` 4)))
   (function-definition external
      main~6 `fn() -> int`
      (compound-statement
         (definition value~8 `enum E~0 complete` (noop-type-conversion `enum E~0 complete` (E `int`)))
         (definition ptr~9 `ptr<int>` (sign-extend `ptr<int>` (value~8 `enum E~0 complete`)))
         (definition roundtripped~10 `enum E~0 complete` (truncate `enum E~0 complete` (ptr~9 `ptr<int>`)))
         (return (equal `int` (noop-type-conversion `int` (value~8 `enum E~0 complete`)) (noop-type-conversion `int` (roundtripped~10 `enum E~0 complete`)))))))

----- stderr -----
