panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_conversion_with_fixed_underlying_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_conversion_with_fixed_underlying_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_conversion_with_fixed_underlying_type.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum E~1
      (enumerators `short`
         (enumerator A~2 0 `int` 0)
         (enumerator B~3 1 `int` 1)
         (enumerator C~4 2 `int` 2)))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition x~7 `enum E~1 complete` (truncate `enum E~1 complete` (0x7fff `int`)))
         (definition y~8 `enum E~1 complete` (truncate `enum E~1 complete` (0x8000 `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (sign-extend `int` (x~7 `enum E~1 complete`))
               (sign-extend `int` (y~8 `enum E~1 complete`))))
         (return (less `int` (sign-extend `int` (y~8 `enum E~1 complete`)) (sign-extend `int` (x~7 `enum E~1 complete`)))))))

----- stderr -----
