panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_enum_as_function_parameter.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_enum_as_function_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_as_function_parameter.c"
   (enum E~0
      (enumerators
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (tentative-definition external x~4 `enum E~0 complete` ∅)
   (function-definition external
      f~5 `fn(e: enum E~0 complete) -> int`
      (params
         e~7 `enum E~0 complete`)
      (compound-statement
         (return (truncate `int` (sizeof `unsigned long` 4 (e~7 `enum E~0 complete`))))))
   (function-definition external
      main~8 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn(e: enum E~0 complete) -> int>`
                  (f~5 `fn(e: enum E~0 complete) -> int`))
               (x~4 `enum E~0 complete`))))))

----- stderr -----
