panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_enum_as_function_return_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_enum_as_function_return_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_as_function_return_type.c"
   (enum E~0
      (enumerators
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (tentative-definition external x~4 `enum E~0 complete` ∅)
   (function-definition external
      f~5 `fn() -> enum E~0 complete`
      (compound-statement
         (return (x~4 `enum E~0 complete`))))
   (function-definition external
      main~7 `fn() -> int`
      (compound-statement
         (return
            (noop-type-conversion `int`
               (call `enum E~0 complete`
                  (addressof `ptr<fn() -> enum E~0 complete>`
                     (f~5 `fn() -> enum E~0 complete`))))))))

----- stderr -----
