panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_enum_bitfields.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_enum_bitfields.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_bitfields.c"
   (enum E~0
      (enumerators
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (struct T~4
      (member x @0[0:2] `enum E~0 complete`)
      (member y @4[0:2] `enum E~0 complete`))
   (function-definition external
      main~5 `fn() -> int`
      (compound-statement
         (definition t~7 `struct T~4 complete`
            (braced
               (subobject +0[0:2] (noop-type-conversion `enum E~0 complete` (B `int`)))
               (subobject +4[0:2] (noop-type-conversion `enum E~0 complete` (C `int`)))))
         (return
            (noop-type-conversion `int`
               (add `unsigned int`
                  (noop-type-conversion `unsigned int`
                     (member `enum E~0 complete` x +0[0:2]
                        (t~7 `struct T~4 complete`)))
                  (noop-type-conversion `unsigned int`
                     (member `enum E~0 complete` y +4[0:2]
                        (t~7 `struct T~4 complete`)))))))))

----- stderr -----
